# mcp-ontobi

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION.md  README.md  api.md  architecture.md  deployment.md
scripts/: run_mcp_server.py  test_extraction.py  test_parser_simple.py
src/obsidian_ontology_mcp/: __init__.py  config.py  server.py
src/obsidian_ontology_mcp/extraction/: __init__.py  parser.py  schema_mapper.py  skos_extractor.py
src/obsidian_ontology_mcp/graph/: __init__.py  builder.py  indexer.py  query.py
src/obsidian_ontology_mcp/http/: __init__.py
src/obsidian_ontology_mcp/mcp/: __init__.py  tools.py
src/obsidian_ontology_mcp/security/: __init__.py  audit.py  auth.py  validation.py
tests/fixtures/sample_vault/: Information Gain.md  Machine Learning.md  Regression.md  Supervised Learning.md
